tests/testcases/02-not_enum.stderr
error: derive_query can only derive from enum.
 --> $DIR/02-not_enum.rs:4:1
  |
4 | / struct Query1 {
5 | |     a: i64,
6 | |     b: char,
7 | | }
  | |_^

error: derive_query can only derive from enum.
 --> $DIR/02-not_enum.rs:9:1
  |
9 | struct Query2(i64, char);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^
